--- a/vmTemplates/node.vm
+++ b/vmTemplates/node.vm
@@ -1,8 +1,10 @@
 ## nodes
 #if($node.type == "Datastore" && ($node.optype == "TableInput" || $node.optype == "TableOutput"))
 	<dataStoreReference id = "_$node.id" name = "$node.name"/>
-#elseif($node.type == "Datastore" && ($node.optype != "TableInput" || $node.optype != "TableOutput"))
+#elseif($node.type == "Datastore" && ($node.optype == "FileInput" || $node.optype == "XMLInput" || $node.optype == "ExcelInput"))
 	<dataInput id="_$node.id" isCollection="false" name="$node.name"/>
+#elseif($node.type == "Datastore" && ($node.optype == "FileOutput" || $node.optype == "XMLOutput" || $node.optype == "ExcelOutput"))
+	<dataOutput id="_$node.id" isCollection="false" name="$node.name"/>
 #elseif($node.type == "Operator" && ($node.optype == "Router" || $node.optype == "Splitter"))
 	<parallelGateway gatewayDirection="Diverging" id="_$node.id" name="$node.name"/>
 #elseif($node.type == "Operator" && ($node.optype == "Union" || $node.optype == "Merger"))
