created start template to connect start event to all source edges that are not a datastore

--- a/vmTemplates/bpmn.vm
+++ b/vmTemplates/bpmn.vm
@@ -22,7 +22,12 @@
  	<terminateEventDefinition/>
 </endEvent>
 
-##edges
+## edges from start event
+#foreach ( $source in $sources )
+	#parse ( "vmTemplates/start.vm" )
+#end
+
+## middle edges
 #foreach( $edge in $edges )
 	#parse( "vmTemplates/edge.vm" )
 #end 
