--- a/vmTemplates/bpmn.vm
+++ b/vmTemplates/bpmn.vm
@@ -24,7 +24,16 @@
 
 ## edges from start event
 #foreach ( $source in $sources )
-	#parse ( "vmTemplates/start.vm" )
+	#if ($source.size == 1)
+		#parse ( "vmTemplates/start.vm" )
+	#else
+		#parse ( "vmTemplates/startWithGateway.vm" )
+	#end
+#end
+
+#if ($divergingGateway == "Y")
+<parallelGateway gatewayDirection="Diverging" id="_001" />
+<sequenceFlow id="_0001-_001" sourceRef="_0001" targetRef="_001" />
 #end
 
 ## middle edges
@@ -34,9 +43,20 @@
 
 ## edges to end event
 #foreach( $target in $targets )
-	#parse( "vmTemplates/end.vm" )
+	#if ($target.size == 1)
+		#parse ( "vmTemplates/end.vm" )
+	#else
+		#parse ( "vmTemplates/endWithGateway.vm" )
+	#end
 #end 
 
+#if ($convergingGateway == "Y")
+<parallelGateway gatewayDirection="Converging" id="_009" />
+<sequenceFlow id="_009-_0009" sourceRef="_009" targetRef="_0009" />
+#end
 
 </process>
+#if ($dataStore == "Y")
+ <dataStore id="DS_1" isUnlimited="false" />
+ #end
 </definitions>
