--- a/vmTemplates/node.vm
+++ b/vmTemplates/node.vm
@@ -3,10 +3,9 @@
 	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
 	#set( $dataStore = "Y")
 	
-#*#elseif($node.type == "Datastore" && ($node.optype == "FileInput" || $node.optype == "XMLInput" || $node.optype == "ExcelInput"))
+#elseif($node.type == "Datastore" && ($node.optype == "FileInput" || $node.optype == "XMLInput" || $node.optype == "ExcelInput"))
 	<dataInput id="_$node.id" isCollection="false" name="$node.name"/>
 	
-	#set( $dataStore = "Y")
 #elseif($node.type == "Datastore" && ($node.optype == "FileOutput" || $node.optype == "XMLOutput" || $node.optype == "ExcelOutput"))
 	<dataOutput id="_$node.id" isCollection="false" name="$node.name"/>
 #elseif($node.type == "Operator" && ($node.optype == "Router" || $node.optype == "Splitter"))
@@ -16,7 +15,7 @@
 #elseif($node.type == "Operator" && $node.optype == "Voter")
 	<eventBasedGateway id="_$node.id" gatewayDirection="Mixed"/>
 #elseif($node.type == "Operator")
-	<task id="_$node.id" name="$node.name" />*#
+	<task id="_$node.id" name="$node.name" />
 	
 #else <task id="_$node.id" name="$node.name" />
 #end
