--- a/vmTemplates/node.vm
+++ b/vmTemplates/node.vm
@@ -1,13 +1,30 @@
 ## nodes
-#if($node.type == "Datastore" && ($node.optype == "TableInput" || $node.optype == "TableOutput"))
+#if($node.type == "Datastore" && $node.optype == "TableInput")
 	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
-	#set( $dataStore = "Y")
+	#set( $database = "Y")
+
+#elseif($node.type == "Datastore" && $node.optype == "TableOutput")
+	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
+	#set( $database = "Y")	
 	
 #elseif($node.type == "Datastore" && ($node.optype == "FileInput" || $node.optype == "XMLInput" || $node.optype == "ExcelInput"))
-	<dataInput id="_$node.id" isCollection="false" name="$node.name"/>
+	<ioSpecification>
+      <dataInput id="_$node.id" isCollection="false" name="$node.name"/>
+      <inputSet>
+        <dataInputRefs>_$node.id</dataInputRefs>
+      </inputSet>
+      <outputSet/>
+    </ioSpecification>
 	
 #elseif($node.type == "Datastore" && ($node.optype == "FileOutput" || $node.optype == "XMLOutput" || $node.optype == "ExcelOutput"))
-	<dataOutput id="_$node.id" isCollection="false" name="$node.name"/>
+	 <ioSpecification>
+      <dataOutput id="_$node.id" isCollection="false" name="$node.name"/>
+      <inputSet/>
+      <outputSet>
+        <dataOutputRefs>_$node.id</dataOutputRefs>
+      </outputSet>
+    </ioSpecification>
+     
 #elseif($node.type == "Operator" && ($node.optype == "Router" || $node.optype == "Splitter"))
 	<parallelGateway gatewayDirection="Diverging" id="_$node.id" name="$node.name"/>
 #elseif($node.type == "Operator" && ($node.optype == "Union" || $node.optype == "Merger"))
@@ -15,7 +32,6 @@
 #elseif($node.type == "Operator" && $node.optype == "Voter")
 	<eventBasedGateway id="_$node.id" gatewayDirection="Mixed"/>
 #elseif($node.type == "Operator")
-	<task id="_$node.id" name="$node.name" />
-	
+	<task id="_$node.id" name="$node.name" />	
 #else <task id="_$node.id" name="$node.name" />
 #end
