--- a/vmTemplates/node.vm
+++ b/vmTemplates/node.vm
@@ -1,11 +1,11 @@
 ## nodes
-#if($node.type == "Datastore" && $node.optype == "TableInput")
+#if($node.type == "Datastore" && $node.optype == "TableOutput" )
 	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
 	#set( $database = "Y")
-
-#elseif($node.type == "Datastore" && $node.optype == "TableOutput")
+	
+#elseif($node.type == "Datastore" && $node.optype == "TableInput" )
 	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
-	#set( $database = "Y")	
+	#set( $database = "Y")
 	
 #elseif($node.type == "Datastore" && ($node.optype == "FileInput" || $node.optype == "XMLInput" || $node.optype == "ExcelInput"))
 	<ioSpecification>
@@ -30,8 +30,6 @@
 #elseif($node.type == "Operator" && ($node.optype == "Union" || $node.optype == "Merger"))
 	<parallelGateway gatewayDirection="Converging" id="_$node.id" name="$node.name"/>
 #elseif($node.type == "Operator" && $node.optype == "Voter")
-	<eventBasedGateway id="_$node.id" gatewayDirection="Mixed"/>
-#elseif($node.type == "Operator")
-	<task id="_$node.id" name="$node.name" />	
+	<eventBasedGateway id="_$node.id" gatewayDirection="Mixed"/>	
 #else <task id="_$node.id" name="$node.name" />
 #end
