printing task tags multiple times issue resolved, id's =1 also changes to 111111

--- a/vmTemplates/dbInputNode.vm
+++ b/vmTemplates/dbInputNode.vm
@@ -1,11 +1,11 @@
 ## nodes that have an incoming db
 #foreach ($edge in $edges)
-	#if($edge.to == $dbInputNode.id && $edge.fromKind == "Datastore")
-	<task id="_$dbInputNode.id" name="$node.name">
+	#if($edge.to == $node.id && $edge.fromKind == "Datastore")
+	<task id="_$node.id" name="$node.name">
       <ioSpecification>
-        <dataInput id="Din_${dbInputNode.id}_$edge.from" isCollection="false"/>
+        <dataInput id="Din_${node.id}_$edge.from" isCollection="false"/>
         <inputSet>
-          <dataInputRefs>Din_${dbInputNode.id}_$edge.from</dataInputRefs>
+          <dataInputRefs>Din_${node.id}_$edge.from</dataInputRefs>
         </inputSet>
         <outputSet/>
       </ioSpecification>
