--- a/vmTemplates/bpmn.vm
+++ b/vmTemplates/bpmn.vm
@@ -15,18 +15,12 @@
 	<startEvent id="_0001" name="StartProcess"/>
 
 #foreach($node in $nodes)
-	#foreach ($dbInputNode in $dbInputNodes)
-		#if($node.id == $dbInputNode.id)
-			#parse( "vmTemplates/dbInputNode.vm" )
-		#else
-			#foreach ($dbOutputNode in $dbOutputNodes)
-				#if($node.id == $dbOutputNode.id)
-					#parse( "vmTemplates/dbOutputNode.vm" )
-				#else
-					#parse( "vmTemplates/node.vm" )
-				#end
-			#end
-		#end
+	#if($node.hasInput == "Y")
+		#parse( "vmTemplates/dbInputNode.vm" )
+	#elseif ($node.hasOutput == "Y")
+		#parse( "vmTemplates/dbOutputNode.vm" )
+	#else
+		#parse( "vmTemplates/node.vm" )
 	#end
 #end
 
