--- a/vmTemplates/node.vm
+++ b/vmTemplates/node.vm
@@ -1,12 +1,23 @@
 ## nodes
-#if($node.type == "Datastore" && $node.optype == "TableOutput" )
+#if($node.type == "Datastore")
 	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
-	#set( $database = "Y")
+	#set( $database = "Y")    
 	
-#elseif($node.type == "Datastore" && $node.optype == "TableInput" )
-	<dataStoreReference dataStoreRef="DS_1" id = "_$node.id" name = "$node.name"/>
-	#set( $database = "Y")
+#elseif($node.type == "Operator" && ($node.optype == "Router" || $node.optype == "Splitter"))
+	<parallelGateway gatewayDirection="Diverging" id="_$node.id" name="$node.name"/>
 	
+#elseif($node.type == "Operator" && ($node.optype == "Union" || $node.optype == "Merger"))
+	<parallelGateway gatewayDirection="Converging" id="_$node.id" name="$node.name"/>
+	
+#elseif($node.type == "Operator" && $node.optype == "Voter")
+	<eventBasedGateway id="_$node.id" gatewayDirection="Mixed"/>
+		
+#else <task id="_$node.id" name="$node.name" />
+
+#end
+
+
+#*	
 #elseif($node.type == "Datastore" && ($node.optype == "FileInput" || $node.optype == "XMLInput" || $node.optype == "ExcelInput"))
 	<ioSpecification>
       <dataInput id="_$node.id" isCollection="false" name="$node.name"/>
@@ -24,12 +35,4 @@
         <dataOutputRefs>_$node.id</dataOutputRefs>
       </outputSet>
     </ioSpecification>
-     
-#elseif($node.type == "Operator" && ($node.optype == "Router" || $node.optype == "Splitter"))
-	<parallelGateway gatewayDirection="Diverging" id="_$node.id" name="$node.name"/>
-#elseif($node.type == "Operator" && ($node.optype == "Union" || $node.optype == "Merger"))
-	<parallelGateway gatewayDirection="Converging" id="_$node.id" name="$node.name"/>
-#elseif($node.type == "Operator" && $node.optype == "Voter")
-	<eventBasedGateway id="_$node.id" gatewayDirection="Mixed"/>	
-#else <task id="_$node.id" name="$node.name" />
-#end
+*#
