gateways and edges working for join and leftouterjoin operators

--- a/vmTemplates/process.vm
+++ b/vmTemplates/process.vm
@@ -1,5 +1,8 @@
 ## inside each process
 #set ($nonEmptyProcess = "N")
+#set ($gatewayCounter = 2)
+
+
 #foreach($node in $nodes)
 	#if($node.engine == $engine.name)
 	#set ($nonEmptyProcess = "Y")
