--- a/vmTemplates/edge.vm
+++ b/vmTemplates/edge.vm
@@ -1,6 +1,20 @@
 ## edges
-#if($edge.fromKind != "Datastore" && $edge.toKind != "Datastore" && $edge.fromEngine == $engine.name && $edge.toEngine == $engine.name)
-<sequenceFlow id="_${edge.from}-_$edge.to" sourceRef="_$edge.from" targetRef="_$edge.to" /> 
+#set ($edgeFromGateway = 0)
+#if($edgeTo != $edge.to)
+#set ($gatewayCounter = ($gatewayCounter + 1))
+#set ($edgeFromGateway = 2)
 #end
+#if($edge.fromKind != "Datastore" && $edge.toKind != "Datastore" && $edge.fromEngine == $engine.name && $edge.toEngine == $engine.name && $edge.toOpType != "Join" && $edge.toOpType != "LeftOuterJoin")
+<sequenceFlow id="_${edge.from}-_$edge.to" sourceRef="_$edge.from" targetRef="_$edge.to" /> 
+#elseif ($edge.fromKind != "Datastore" && $edge.toKind != "Datastore" && $edge.fromEngine == $engine.name && $edge.toEngine == $engine.name &&
+			($edge.toOpType == "Join" || $edge.toOpType == "LeftOuterJoin"))
+<parallelGateway gatewayDirection="Converging" id="_0$gatewayCounter" name="Parallel Gateway"/>
+<sequenceFlow id="_${edge.from}-_0$gatewayCounter" sourceRef="_$edge.from" targetRef="_0$gatewayCounter" /> 
+#set ($edgeTo = $edge.to)
+	#if ($edgeFromGateway < 1 )
+		<sequenceFlow id="_0${gatewayCounter}-_$edge.to" sourceRef="_0$gatewayCounter" targetRef="_$edge.to" /> 
+	#end
+#end
+
 
    
