--- a/vmTemplates/dbInputNode.vm
+++ b/vmTemplates/dbInputNode.vm
@@ -1,6 +1,6 @@
 ## nodes that have an incoming db
 #foreach ($edge in $edges)
-	#if($edge.to == $node.id && $edge.fromKind == "Datastore")
+	#if($edge.to == $node.id && $edge.fromKind == "Datastore" && $edge.toOpType != "Join" && $edge.toOpType != "LeftOuterJoin")
 	<task id="_$node.id" name="$node.name">
       <ioSpecification>
         <dataInput id="Din_${node.id}_$edge.from" isCollection="false"/>
@@ -10,5 +10,7 @@
         <outputSet/>
       </ioSpecification>
       </task>
+	#elseif($edge.to == $node.id && $edge.fromKind == "Datastore" && ($edge.toOpType == "Join" || $edge.toOpType == "LeftOuterJoin"))
+	 <task id="_$node.id" name="$node.name"/>
 	#end
 #end
