JSONDictionary now parses pattern flags. BPMNConstructs create process tags for each unique pool. tasks are not yet divided between pool.TODO

--- a/vmTemplates2/jsonTest.vm
+++ b/vmTemplates2/jsonTest.vm
@@ -1,3 +1,22 @@
-#foreach ($element in $elements)
+## print collaboration block here
+#foreach ($element in $collaborationElements)
+<$element.name $element.attributes>
+	#foreach ($element in $subElements)
+		<$element.name $element.attributes />
+	#end
+<$element.name />
+#end
+
+#foreach ($element in $simpleElements)
 <$element.name $element.attributes />
 #end
+
+#foreach ($element in $complexElements)
+<$element.name $element.attributes>
+	#foreach ($element in $subElements)
+		<$element.name $element.attributes />
+	#end
+<$element.name />
+#end
+
+
