bpmn for large file is working.edges are connecting properly with inserted subprocesses

--- a/vmTemplates2/jsonTest.vm
+++ b/vmTemplates2/jsonTest.vm
@@ -29,7 +29,11 @@
 		<$element.name $element.attributes>
 			#foreach ($sub in $subElements)
 				 #if ($element.id == $sub.elementID)
+				 	#if (!$sub.text)
+				 	<$sub.subName $sub.attributes/>
+				 	#else
 					<$sub.subName $sub.attributes>$sub.text</$sub.subName>
+					#end
 				#end
 			#end
 		</$element.name>
